style: fix scrollbar gutter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-main {
-  scrollbar-gutter: stable;
-}
-
 .glass {
   position: absolute;
   inset: 0;
